biber (1.9-1) unstable; urgency=medium

  * Imported Upstream version 1.9 (Closes: #753331)
  * bump dependencies' version infor according to upstream
  * break against 2013's texlive-bibtex-extra
  * remove readonly-xs-perl recommends, following upstream

 -- Norbert Preining <preining@debian.org>  Tue, 01 Jul 2014 08:42:08 +0900

biber (1.8-1) unstable; urgency=low

  * install documentation for biber (biber.pdf) (Closes: #689201)
  * Imported Upstream version 1.8 (Closes: #734413)
  * update mozilla patch, drop upstream included patches
  * bump standards version, no changes necessary
  * add libtest-pod-coverage-perl to build-deps
  * update vcs fields to new location
  * new patch fix-xpathcontext - thanks to Don Armstrong

 -- Norbert Preining <preining@debian.org>  Wed, 08 Jan 2014 07:14:18 +0900

biber (1.7-2) unstable; urgency=low

  * replace recommends: biblatex -> texlive-bibtex-extra, biblatex* will
    be removed from the archive
  * break against biblatex (<< 2) (Closes: #722727)

 -- Norbert Preining <preining@debian.org>  Sun, 15 Sep 2013 09:32:04 +0900

biber (1.7-1) unstable; urgency=low

  [ gregor herrmann ]
  * debian/control: update {versioned,alternative} (build) dependencies.

  [ Xavier Guimard ]
  * Update debian/watch

  [ Danai SAE-HAN (韓達耐) ]
  * New upstream release 1.7:
    - There are a lot of changes and updates since the last Debian
      package (v0.9.9).  I thoroughly recommend to have a look at
      the upstream changelog which you can find under
      /usr/share/doc/biber/changelog.gz
    - Some highlights are:
      + A number of options have changed names; ATM the old ones are
        still supported.
      + Works with biblatex v2.5.
      + A new "tool" mode which takes a data source as argument and
        just performs reencoding, source mappings etc.
      + Extra disambiguation trackers for labels and titles.
      + Sorting per list enabled for biblatex v2.0.