@@ -7,95 +7,110 @@ Last-Update: 2014-01-07
 Comment: fixes to adapt to biber 1.8
 
 ---
- lib/Biber/Input/file/biblatexml.pm   |    8 ++------
- lib/Biber/Input/file/bibtex.pm       |    8 ++------
- lib/Biber/Input/file/endnotexml.pm   |    8 ++------
- lib/Biber/Input/file/ris.pm          |    8 ++------
- lib/Biber/Input/file/zoterordfxml.pm |    8 ++------
- 5 files changed, 10 insertions(+), 30 deletions(-)
+ lib/Biber/Input/file/biblatexml.pm   |   11 -----------
+ lib/Biber/Input/file/bibtex.pm       |   11 -----------
+ lib/Biber/Input/file/endnotexml.pm   |   11 -----------
+ lib/Biber/Input/file/ris.pm          |   11 -----------
+ lib/Biber/Input/file/zoterordfxml.pm |   11 -----------
+ 5 files changed, 55 deletions(-)
 
 --- biber.orig/lib/Biber/Input/file/biblatexml.pm
 +++ biber/lib/Biber/Input/file/biblatexml.pm
-@@ -99,12 +99,8 @@
-       # It may, however, have been removed by some biber unpacked dists
-       if (not exists($ENV{PERL_LWP_SSL_CA_FILE}) and
-           not exists($ENV{PERL_LWP_SSL_CA_PATH}) and
--          not defined(Biber::Config->getoption('ssl-nointernalca')) and
--          eval {require Mozilla::CA}) {
--        # we assume that the default CA file is in .../Mozilla/CA/cacert.pem
--        (my $vol, my $dir, undef) = File::Spec->splitpath( $INC{"Mozilla/CA.pm"} );
--        $dir =~ s/\/$//; # splitpath sometimes leaves a trailing '/'
--        $ENV{PERL_LWP_SSL_CA_FILE} = File::Spec->catpath($vol, "$dir/CA", 'cacert.pem');
-+          not defined(Biber::Config->getoption('ssl-nointernalca'))) {
-+        $ENV{PERL_LWP_SSL_CA_FILE} = '/etc/ssl/certs/ca-certificates.crt';
-       }
+@@ -99,17 +99,6 @@
+         # use IO::Socket::SSL qw(debug99); # useful for debugging SSL issues
+         # We have to explicitly set the cert path because otherwise the https module
+         # can't find the .pem when PAR::Packer'ed
+-        # Have to explicitly try to require Mozilla::CA here to get it into %INC below
+-        # It may, however, have been removed by some biber unpacked dists
+-        if (not exists($ENV{PERL_LWP_SSL_CA_FILE}) and
+-            not exists($ENV{PERL_LWP_SSL_CA_PATH}) and
+-            not defined(Biber::Config->getoption('ssl-nointernalca')) and
+-            eval {require Mozilla::CA}) {
+-          # we assume that the default CA file is in .../Mozilla/CA/cacert.pem
+-          (my $vol, my $dir, undef) = File::Spec->splitpath( $INC{"Mozilla/CA.pm"} );
+-          $dir =~ s/\/$//;      # splitpath sometimes leaves a trailing '/'
+-          $ENV{PERL_LWP_SSL_CA_FILE} = File::Spec->catpath($vol, "$dir/CA", 'cacert.pem');
+-        }
  
-       # fallbacks for, e.g., linux
+         # fallbacks for, e.g., linux
+         unless (exists($ENV{PERL_LWP_SSL_CA_FILE})) {
 --- biber.orig/lib/Biber/Input/file/endnotexml.pm
 +++ biber/lib/Biber/Input/file/endnotexml.pm
-@@ -118,12 +118,8 @@
-       # It may, however, have been removed by some biber unpacked dists
-       if (not exists($ENV{PERL_LWP_SSL_CA_FILE}) and
-           not exists($ENV{PERL_LWP_SSL_CA_PATH}) and
+@@ -113,17 +113,6 @@
+       # use IO::Socket::SSL qw(debug99); # useful for debugging SSL issues
+       # We have to explicitly set the cert path because otherwise the https module
+       # can't find the .pem when PAR::Packer'ed
+-      # Have to explicitly try to require Mozilla::CA here to get it into %INC below
+-      # It may, however, have been removed by some biber unpacked dists
+-      if (not exists($ENV{PERL_LWP_SSL_CA_FILE}) and
+-          not exists($ENV{PERL_LWP_SSL_CA_PATH}) and
 -          not defined(Biber::Config->getoption('ssl-nointernalca')) and
 -          eval {require Mozilla::CA}) {
 -        # we assume that the default CA file is in .../Mozilla/CA/cacert.pem
 -        (my $vol, my $dir, undef) = File::Spec->splitpath( $INC{"Mozilla/CA.pm"} );
 -        $dir =~ s/\/$//; # splitpath sometimes leaves a trailing '/'
 -        $ENV{PERL_LWP_SSL_CA_FILE} = File::Spec->catpath($vol, "$dir/CA", 'cacert.pem');
-+          not defined(Biber::Config->getoption('ssl-nointernalca'))) {
-+        $ENV{PERL_LWP_SSL_CA_FILE} = '/etc/ssl/certs/ca-certificates.crt';
-       }
+-      }
  
        # fallbacks for, e.g., linux
+       unless (exists($ENV{PERL_LWP_SSL_CA_FILE})) {
 --- biber.orig/lib/Biber/Input/file/ris.pm
 +++ biber/lib/Biber/Input/file/ris.pm
-@@ -113,12 +113,8 @@
-       # It may, however, have been removed by some biber unpacked dists
-       if (not exists($ENV{PERL_LWP_SSL_CA_FILE}) and
-           not exists($ENV{PERL_LWP_SSL_CA_PATH}) and
--          not defined(Biber::Config->getoption('ssl-nointernalca')) and
--          eval {require Mozilla::CA}) {
--        # we assume that the default CA file is in .../Mozilla/CA/cacert.pem
--        (my $vol, my $dir, undef) = File::Spec->splitpath( $INC{"Mozilla/CA.pm"} );
--        $dir =~ s/\/$//; # splitpath sometimes leaves a trailing '/'
--        $ENV{PERL_LWP_SSL_CA_FILE} = File::Spec->catpath($vol, "$dir/CA", 'cacert.pem');
-+          not defined(Biber::Config->getoption('ssl-nointernalca'))) {
-+        $ENV{PERL_LWP_SSL_CA_FILE} = '/etc/ssl/certs/ca-certificates.crt';
-       }
+@@ -112,17 +112,6 @@
+         # use IO::Socket::SSL qw(debug99); # useful for debugging SSL issues
+         # We have to explicitly set the cert path because otherwise the https module
+         # can't find the .pem when PAR::Packer'ed
+-        # Have to explicitly try to require Mozilla::CA here to get it into %INC below
+-        # It may, however, have been removed by some biber unpacked dists
+-        if (not exists($ENV{PERL_LWP_SSL_CA_FILE}) and
+-            not exists($ENV{PERL_LWP_SSL_CA_PATH}) and
+-            not defined(Biber::Config->getoption('ssl-nointernalca')) and
+-            eval {require Mozilla::CA}) {
+-          # we assume that the default CA file is in .../Mozilla/CA/cacert.pem
+-          (my $vol, my $dir, undef) = File::Spec->splitpath( $INC{"Mozilla/CA.pm"} );
+-          $dir =~ s/\/$//;      # splitpath sometimes leaves a trailing '/'
+-          $ENV{PERL_LWP_SSL_CA_FILE} = File::Spec->catpath($vol, "$dir/CA", 'cacert.pem');
+-        }
  
-       # fallbacks for, e.g., linux
+         # fallbacks for, e.g., linux
+         unless (exists($ENV{PERL_LWP_SSL_CA_FILE})) {
 --- biber.orig/lib/Biber/Input/file/zoterordfxml.pm
 +++ biber/lib/Biber/Input/file/zoterordfxml.pm
-@@ -129,12 +129,8 @@
-       # It may, however, have been removed by some biber unpacked dists
-       if (not exists($ENV{PERL_LWP_SSL_CA_FILE}) and
-           not exists($ENV{PERL_LWP_SSL_CA_PATH}) and
+@@ -125,17 +125,6 @@
+       # use IO::Socket::SSL qw(debug99); # useful for debugging SSL issues
+       # We have to explicitly set the cert path because otherwise the https module
+       # can't find the .pem when PAR::Packer'ed
+-      # Have to explicitly try to require Mozilla::CA here to get it into %INC below
+-      # It may, however, have been removed by some biber unpacked dists
+-      if (not exists($ENV{PERL_LWP_SSL_CA_FILE}) and
+-          not exists($ENV{PERL_LWP_SSL_CA_PATH}) and
 -          not defined(Biber::Config->getoption('ssl-nointernalca')) and
 -          eval {require Mozilla::CA}) {
 -        # we assume that the default CA file is in .../Mozilla/CA/cacert.pem
 -        (my $vol, my $dir, undef) = File::Spec->splitpath( $INC{"Mozilla/CA.pm"} );
 -        $dir =~ s/\/$//; # splitpath sometimes leaves a trailing '/'
 -        $ENV{PERL_LWP_SSL_CA_FILE} = File::Spec->catpath($vol, "$dir/CA", 'cacert.pem');
-+          not defined(Biber::Config->getoption('ssl-nointernalca'))) {
-+        $ENV{PERL_LWP_SSL_CA_FILE} = '/etc/ssl/certs/ca-certificates.crt';
-       }
+-      }
  
        # fallbacks for, e.g., linux
+       unless (exists($ENV{PERL_LWP_SSL_CA_FILE})) {
 --- biber.orig/lib/Biber/Input/file/bibtex.pm
 +++ biber/lib/Biber/Input/file/bibtex.pm
-@@ -140,12 +140,8 @@
-       # It may, however, have been removed by some biber unpacked dists
-       if (not exists($ENV{PERL_LWP_SSL_CA_FILE}) and
-           not exists($ENV{PERL_LWP_SSL_CA_PATH}) and
--          not defined(Biber::Config->getoption('ssl-nointernalca')) and
--          eval {require Mozilla::CA}) {
--        # we assume that the default CA file is in .../Mozilla/CA/cacert.pem
--        (my $vol, my $dir, undef) = File::Spec->splitpath( $INC{"Mozilla/CA.pm"} );
--        $dir =~ s/\/$//; # splitpath sometimes leaves a trailing '/'
--        $ENV{PERL_LWP_SSL_CA_FILE} = File::Spec->catpath($vol, "$dir/CA", 'cacert.pem');
-+          not defined(Biber::Config->getoption('ssl-nointernalca'))) {
-+        $ENV{PERL_LWP_SSL_CA_FILE} = '/etc/ssl/certs/ca-certificates.crt';
-       }
+@@ -142,17 +142,6 @@
+         # use IO::Socket::SSL qw(debug99); # useful for debugging SSL issues
+         # We have to explicitly set the cert path because otherwise the https module
+         # can't find the .pem when PAR::Packer'ed
+-        # Have to explicitly try to require Mozilla::CA here to get it into %INC below
+-        # It may, however, have been removed by some biber unpacked dists
+-        if (not exists($ENV{PERL_LWP_SSL_CA_FILE}) and
+-            not exists($ENV{PERL_LWP_SSL_CA_PATH}) and
+-            not defined(Biber::Config->getoption('ssl-nointernalca')) and
+-            eval {require Mozilla::CA}) {
+-          # we assume that the default CA file is in .../Mozilla/CA/cacert.pem
+-          (my $vol, my $dir, undef) = File::Spec->splitpath( $INC{"Mozilla/CA.pm"} );
+-          $dir =~ s/\/$//;      # splitpath sometimes leaves a trailing '/'
+-          $ENV{PERL_LWP_SSL_CA_FILE} = File::Spec->catpath($vol, "$dir/CA", 'cacert.pem');
+-        }
  
-       # fallbacks for, e.g., linux
+         # fallbacks for, e.g., linux
+         unless (exists($ENV{PERL_LWP_SSL_CA_FILE})) {
